/*
 * Copyright 2022 Google LLC
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package mobileharness.api.messaging;

import "src/devtools/mobileharness/api/messaging/messaging.proto";

option java_package = "com.google.devtools.mobileharness.api.messaging.proto";
option java_outer_classname = "MessagingServiceProto";

// RPC service of OmniLab messaging system.
service MessagingService {
  // Sends a message.
  rpc SendMessage(SendMessageRequest) returns (stream SendMessageResponse) {}
}

message SendMessageRequest {
  MessageSend message_send = 1;
}

message SendMessageResponse {
  MessageReceptions message_receptions = 1;
}
